# sensorium

./: .gitignore  LICENSE  README.md  REUSE.toml  pyproject.toml  requirements.txt  setup.py
LICENSES/: BSD-3-Clause.txt
examples_dataset_exploration/: check_video_classification.ipynb  check_video_duplicates.ipynb  check_video_segments.ipynb  example_load_data.ipynb  examples_handle_data.ipynb
managedata/: dataset.py  responses.py  videos.py  videos_duplicates.py
metadata/: LICENSE.txt
metadata/dynamic29156-11-10-Video-8744edeac3b4d1ce16b680916b5267ce/: meta-basic-dynamic29156-11-10-Video-8744edeac3b4d1ce16b680916b5267ce.json  meta-basic_dynamic29156-11-10-Video-8744edeac3b4d1ce16b680916b5267ce.json
metadata/dynamic29228-2-10-Video-8744edeac3b4d1ce16b680916b5267ce/: meta-basic-dynamic29228-2-10-Video-8744edeac3b4d1ce16b680916b5267ce.json  meta-basic_dynamic29228-2-10-Video-8744edeac3b4d1ce16b680916b5267ce.json  (+1 more)
notebooks_dataset_exploration/: check_valid_data.ipynb  check_valid_data.ipynb.license  check_valid_frames.ipynb  check_video_classification.ipynb  check_video_duplicates.ipynb  check_video_segments.ipynb  example_load_data.ipynb  examples_handle_data.ipynb
scripts/: check_video_classification.ipynb  check_video_duplicates.ipynb  check_video_segments.ipynb  classify_videos.py  define_segments_ids.py  define_videos_ids.py  example_load_data.ipynb  examples_handle_data.ipynb  generate_neurons_metadata.py
scripts/managedata/: behavioral.py  (+3 more)
scripts_tda/: compute_grid_activation.py  compute_grid_activation_stats.py
scripts_to_generate_metadata/: classify_videos.py  define_segments_ids.py  define_videos_ids.py  determine_valid_data.py  determine_valid_frames.py  generate_basic_metadata.py  generate_neurons_metadata.py
ssdatam/: __init__.py  behavioral.py  dataset.py  dataset_derivatives.py  grids.py  metadata.py  responses.py  videos.py  videos_duplicates.py
tda/: assign_grid.f90  compute_gird_activation_stats.py  compute_grid_activation.py  compute_grid_activation_stats.py  dataset_derivatives.py  explore_grids.ipynb  grids.py  test_grids.ipynb  test_grids.py
utils/: behavioral.py  data_handling.py  dataset.py  metadata.py  neurons.py  responses.py  videos.py  videos_duplicates.py
(+19678 files in other folders)
